# TradePay

./: .gitignore  commands.md  docker-compose.yml  manage.py  pyproject.toml
apps/inventory/: admin.py  models.py  serializers.py  urls.py  views.py
apps/orders/: models.py  serializers.py  urls.py  views.py
apps/orders/templates/mail/: invoice_created_body.html  order_created_body.html  order_created_title.txt
apps/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
apps/transactions/: models.py  services.py  urls.py  views.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/templates/users/: confirmation.html  password_changed.html
docker/local/django/: Dockerfile  entrypoint
docker/local/django/celery/flower/: start
docker/local/django/celery/worker/: start
docker/local/nginx/: Dockerfile  default.conf
papss_config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
utils/: exceptions.py  fuzzysearch.py  template_email.py  utils.py
